# rovi2

./: README.md  assimp_log.txt
DATA/: circlePCD.pcd  complexPCD.pcd  grab.pcd  squarePCDV3.pcd
DATA/CLOSE/: CLOSE_SCORE.ods
DATA/FAR/: .~lock.SCORE.ods#  SCORE.ods
DATA/LINE/: SCORE_LINE.ods
LuaScriptFunction/: LuaScriptFunction.txt
SBLpoc/: CMakeLists.txt
SBLpoc/Workcells/WRS-RobWork/: 18181-03-2000.mtl  GripperConcentricProximitySetup.xml  GripperScrewProximitySetup.xml  GripperSuctionWideProximitySetup.xml  ProximitySetup.xml  SuctionCupCylindersWide.xml  WRS_v3.wc.xml
SBLpoc/Workcells/WRS-RobWork/Cell/: RobotFloorMount.mtl
SBLpoc/Workcells/WRS-RobWork/Tools/: 18181-01-2001.mtl  suction_large_v2.mtl
SBLpoc/Workcells/WRS-RobWork/UR10e/: WRS-UR.xml
SBLpoc/Workcells/WRS-RobWork/robotiq_v3/: robotiq_distance_control.xml  robotiq_finger_control.xml
SBLpoc/Workcells/WRS-RobWork12DOG/: 150906-02-01-2001-Ramme-Boks-profil.mtl  AssemblyRobotSetup.stl  AssemblyRobotSetupASCII.stl  AssemblyRobotSetupWC.stl  GripperConcentric.wc.xml  GripperSuctionWide.wc.xml  GripperSuctionWide.xml  Rob12Blank.wc.xml  WCblank.wc.xml  WRS_v3.wc.xml  WRS_v3v2.wc.xml
SBLpoc/Workcells/WRS-RobWork12DOG/FestoConcentric/: FestoConcentric.xml  ProximitySetup.xml
SBLpoc/Workcells/WRS-RobWork12DOG/FestoConcentric/Geometry/: festo_finger.mtl
SBLpoc/Workcells/WRS-RobWork12DOG/Fingers/: 18181-01-1002-01.mtl
SBLpoc/Workcells/WRS-RobWork12DOG/Schunk-RC-1216-H/Geometry/: rotating.mtl
SBLpoc/Workcells/WRS-RobWork12DOG/Tools/: 543938_DGSL-8-30-Y3A-fixed.mtl
SBLpoc/Workcells/WRS-RobWork12DOG/UR10/Geometry/: joint3.mtl
SBLpoc/Workcells/WRS-RobWork12DOG/UR1012/: DHParam.xml  PosRPYParam.xml  ProximitySetup.xml  ProximitySetupNew3.xml  UR10e.xml  WRS-UR.xml
SBLpoc/Workcells/WRS-RobWork12DOG/UR10e/: ProximitySetupNew2.xml  WRS-UR.xml
SBLpoc/src/: SBLcollision (copy).cpp  SBLcollision.cpp
SBLpoc/srv/: SBL_cmd.srv
point_image/: CMakeLists.txt  package.xml
point_image/src/: point_image.cpp
pose_final_test/: CMakeLists.txt  pose_final_test.cpp
pose_image/: CMakeLists.txt  pose_image.cpp
pose_image_test/: CMakeLists.txt  pose_image_test.cpp
pose_ros/: CMakeLists.txt  package.xml  trianglePCD.pcd
pose_ros/msg/: Object_pose.msg
pose_ros/src/: pose_estimation_ros.cpp
pose_rotation_test/: CMakeLists.txt  pose_rotation_test.cpp
rovi2/: CMakeLists.txt  package.xml
rovi2/WorkCell/WRS-RobWork/: 150906-02-01-9001-161025.P.T2_Basic_1200x800x50_plasmanitreret.mtl  150906-02-02-2001-Cabinet.mtl  18181-00-1000-02.mtl  18181-02-2000.mtl  CB2_controllerbox-Technicon.mtl  GripperA.wc.xml  GripperA.xml  GripperB.xml  GripperConcentric.xml  GripperScrew.wc.xml  GripperScrew.xml  GripperScrew_v2.wc.xml  GripperScrew_v2.xml  SuctionCupCylinders.xml  SuctionCupCylindersWide_v2.xml  UR_Teach_Pendant_2.0.mtl  WRS_v1.wc.xml  WRS_v2.wc.xml  WRS_v3.wc.xml
rovi2/WorkCell/WRS-RobWork/FestoConcentric/: FestoConcentric-Grasp.xml  FestoConcentric-Rotate.xml
rovi2/WorkCell/WRS-RobWork/FestoConcentric/Geometry/: festo_fixed.mtl  festo_rotating.mtl
rovi2/WorkCell/WRS-RobWork/Schunk-RC-1216-H/: Schunk-RC-1216-H-Grasp.xml  Schunk-RC-1216-H-Rotate.xml  Schunk-RC-1216-H.xml
rovi2/WorkCell/WRS-RobWork/Schunk-RC-1216-H/Geometry/: base.mtl
rovi2/WorkCell/WRS-RobWork/Tools/: 18181-01-2000.mtl  543938_DGSL-8-30-Y3A-moving.mtl  cylinder_connectors2.mtl  cylinder_v2.mtl  screwdriver.mtl  screwdriver_cylinder_mount.mtl  suction_mount_wide_v2.mtl  swiwel.mtl  swiwel_v2.mtl
rovi2/WorkCell/WRS-RobWork/UR10/: DHParam.xml  UR10_v2.xml
rovi2/WorkCell/WRS-RobWork/UR10/Geometry/: Base.mtl  ToolFlange.mtl  joint0.mtl  joint1.mtl  joint2.mtl
rovi2/WorkCell/WRS-RobWork/UR10e/: UR10e.xml  WRS-UR.xml
rovi2/WorkCell/WRS-RobWork/robotiq_v3/: README.txt
rovi2/WorkCell/WRS-RobWork/robotiq_v3/geometry/: AGC-CPL-062-002.mtl  base.mtl  finger.mtl  inner_link.mtl  motor_joint.mtl  outer_link.mtl  readme.txt
rovi2/caros_param/: caros_universalrobot2_param.xml  caros_universalrobot_param.xml
rovi2/launch/: connect_hardware.launch
rovi2/msg/: Grasp_cmd.msg
rovi2/src/: Grasp.cpp  InterfaceEmil.cpp  SBLcollision.cpp  grasp_service.cpp  interface.cpp  inversekin.cpp
rovi2/src/includes/: inversekin.h
rovi2/srv/: Grasp_cmd.srv  SBL_cmd.srv
