<?xml version="1.0"?>
<package format="2">
  <name>rovi2</name>
  <version>0.0.0</version>
  <description>The rovi2 package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="christine@todo.todo">christine</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>caros_universalrobot</build_depend>
  <build_depend>robotiq_2f_driver</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>wsg_50_driver</build_depend>
  <build_depend>wsg_50_common</build_depend>
  <build_depend>robotiq_2f_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pose_ros</build_depend>
  <build_export_depend>caros_universalrobot</build_export_depend>
  <build_export_depend>robotiq_2f_driver</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>wsg_50_driver</build_export_depend>
  <build_export_depend>wsg_50_common</build_export_depend>
  <build_export_depend>pose_ros</build_export_depend>
  <build_export_depend>robotiq_2f_msgs</build_export_depend>
  <exec_depend>caros_universalrobot</exec_depend>
  <exec_depend>robotiq_2f_driver</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>wsg_50_driver</exec_depend>
  <exec_depend>wsg_50_common</exec_depend>
  <exec_depend>robotiq_2f_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>pose_ros</exec_depend>
  <depend>caros_sensor_msgs</depend>
  <depend>caros_teleoperation</depend>
<depend>caros_common_robwork_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
